[package]
name = "meu_projeto_p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2.1", features = ["serde"] }
rand = "0.8"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }